--- a/source/catalog.html
+++ b/source/catalog.html
@@ -239,7 +239,7 @@
       </ul>
     </section>
     <section class="additional">
-      <h2 class="additional__title">Дополнительные товары</h2>
+      <h2 class="additional__title title-lines"><span>Дополнительные товары</span></h2>
       <div class="additional__wrapper">
         <ul class="additional__list">
           <li class="additional__item">
