--- a/source/index.html
+++ b/source/index.html
@@ -161,34 +161,8 @@
         </div>
         <div class="example__wrapper example__wrapper--slider">
           <div class="example__wrapper-images">
-            <div class="example__image-block example__image-block--before">
-              <picture>
-                <source type="image/webp" media="(min-width: 1300px)"
-                  srcset="img/webp/before-desktop@1x.webp 1x, img/webp/before-desktop@2x.webp 2x">
-                <source type="image/webp" media="(min-width: 768px)"
-                  srcset="img/webp/before-tablet@1x.webp 1x, img/webp/before-tablet@2x.webp 2x">
-                <source type="image/webp" srcset="img/webp/before-mobile@1x.webp 1x, img/webp/before-mobile@2x.webp 2x">
-
-                <source srcset="img/before-desktop@1x.png 1x, img/before-desktop@2x.png 2x" media="(min-width: 1300px)">
-                <source srcset="img/before-tablet@1x.png 1x, img/before-tablet@2x.png 2x" media="(min-width: 768px)">
-                <img class="example__image" src="img/before-mobile@1x.png" srcset="img/before-mobile@2px.png 2x"
-                  alt="Толстый кот">
-              </picture>
-            </div>
-            <div class="example__image-block example__image-block--after">
-              <picture>
-                <source type="image/webp" media="(min-width: 1300px)"
-                  srcset="img/webp/after-desktop@1x.webp 1x, img/webp/after-desktop@2x.webp 2x">
-                <source type="image/webp" media="(min-width: 768px)"
-                  srcset="img/webp/after-tablet@1x.webp 1x, img/webp/after-tablet@2x.webp 2x">
-                <source type="image/webp" srcset="img/webp/after-mobile@1x.webp 1x, img/webp/after-mobile@2x.webp 2x">
-
-                <source srcset="img/after-desktop@1x.png 1x, img/after-desktop@2x.png 2x" media="(min-width: 1300px)">
-                <source srcset="img/after-tablet@1x.png 1x, img/after-tablet@2x.png 2x" media="(min-width: 768px)">
-                <img class="example__image" src="img/after-mobile@1x.png" srcset="img/after-mobile@2px.png 2x"
-                  alt="После правильного питания">
-              </picture>
-            </div>
+            <div class="example__image-block example__image-block--before"></div>
+            <div class="example__image-block example__image-block--after"></div>
           </div>
 
           <div class="example__toggle toggle">
