Исправление мелких ошибок

--- a/source/index.html
+++ b/source/index.html
@@ -187,7 +187,7 @@
           <span class="contacts__city">Санкт-Петербург</span>
         </span>
       </div>
-      <div class="contacts__map">
+      <div class="contacts__map" id="map">
         <span class="contacts__pin"></span>
       </div>
     </div>
@@ -254,7 +254,9 @@
     </div>
   </footer>
 </body>
+<script src="//api-maps.yandex.ru/2.1/?lang=ru_RU"></script>
 <script src="js/picturefill.min.js"></script>
 <script src="js/svg4everybody.min.js"></script>
+<script src="js/script.min.js"></script>
 
 </html>
