Map ready and button order

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -12,7 +12,6 @@
 
   <link rel="stylesheet" href="css/style.css">
 </head>
-</head>
 
 <body>
   <div style="display:none">
@@ -88,7 +87,7 @@
               </tr>
             </table>
           </div>
-          <a class="catalog__order-link button" href="#">Заказать</a>
+          <a class="catalog__order-link button" href="order.html">Заказать</a>
         </li>
         <li class="catalog__item">
           <a class="catalog__link" href="#">
@@ -127,7 +126,7 @@
               </tr>
             </table>
           </div>
-          <a class="catalog__order-link button" href="#">Заказать</a>
+          <a class="catalog__order-link button" href="order.html">Заказать</a>
         </li>
         <li class="catalog__item">
           <a class="catalog__link " href="#">
@@ -166,7 +165,7 @@
               </tr>
             </table>
           </div>
-          <a class="catalog__order-link button" href="#">Заказать</a>
+          <a class="catalog__order-link button" href="order.html">Заказать</a>
         </li>
         <li class="catalog__item">
           <a class="catalog__link" href="#">
@@ -204,7 +203,7 @@
               </tr>
             </table>
           </div>
-          <a class="catalog__order-link button" href="#">Заказать</a>
+          <a class="catalog__order-link button" href="order.html">Заказать</a>
         </li>
         <li class="catalog__item">
           <a class="catalog__link " href="#">
@@ -243,7 +242,7 @@
               </tr>
             </table>
           </div>
-          <a class="catalog__order-link button" href="#">Заказать</a>
+          <a class="catalog__order-link button" href="order.html">Заказать</a>
         </li>
         <li class="catalog__item">
           <div class="catalog__link">
@@ -282,7 +281,7 @@
               </tr>
             </table>
           </div>
-          <a class="catalog__order-link button" href="#">Заказать</a>
+          <a class="catalog__order-link button" href="order.html">Заказать</a>
         </li>
         <li class="catalog__item">
           <div class="catalog__link ">
@@ -321,7 +320,7 @@
               </tr>
             </table>
           </div>
-          <a class="catalog__order-link button" href="#">Заказать</a>
+          <a class="catalog__order-link button" href="order.html">Заказать</a>
         </li>
         <li class="catalog__item catalog__item--more">
           <a class="catalog__link catalog__link--more" href="#">
@@ -358,7 +357,7 @@
                 <td class="additional__properties-value">200 Р.</td>
               </tr>
             </table>
-            <a class="additional__order button" href="#">Заказать</a>
+            <a class="additional__order button" href="order.html">Заказать</a>
           </li>
           <li class="additional__item">
             <h3 class="additional__item-title">
@@ -370,7 +369,7 @@
                 <td class="additional__properties-value">50 Р.</td>
               </tr>
             </table>
-            <a class="additional__order button" href="#">Заказать</a>
+            <a class="additional__order button" href="order.html">Заказать</a>
           </li>
           <li class="additional__item">
             <h3 class="additional__item-title">
@@ -382,7 +381,7 @@
                 <td class="additional__properties-value">100 Р.</td>
               </tr>
             </table>
-            <a class="additional__order button" href="#">Заказать</a>
+            <a class="additional__order button" href="order.html">Заказать</a>
           </li>
           <li class="additional__item">
             <h3 class="additional__item-title">
@@ -394,7 +393,7 @@
                 <td class="additional__properties-value">300 Р.</td>
               </tr>
             </table>
-            <a class="additional__order button" href="#">Заказать</a>
+            <a class="additional__order button" href="order.html">Заказать</a>
           </li>
         </ul>
       </div>
@@ -417,7 +416,7 @@
           <span class="contacts__city">Санкт-Петербург</span>
         </span>
       </div>
-      <div class="contacts__map">
+      <div class="contacts__map" id="map">
         <span class="contacts__pin"></span>
       </div>
     </div>
@@ -483,8 +482,10 @@
       </div>
     </div>
   </footer>
+  <script src="//api-maps.yandex.ru/2.1/?lang=ru_RU"></script>
+  <script src="js/picturefill.min.js"></script>
+  <script src="js/svg4everybody.min.js"></script>
+  <script src="js/script.min.js"></script>
 </body>
-<script src="js/picturefill.min.js"></script>
-<script src="js/svg4everybody.min.js"></script>
 
 </html>
