--- a/source/form.html
+++ b/source/form.html
@@ -12,7 +12,6 @@
 
   <link rel="stylesheet" href="css/style.css">
 </head>
-</head>
 
 <body>
   <div style="display:none">
@@ -175,7 +174,7 @@
           <span class="contacts__city">Санкт-Петербург</span>
         </span>
       </div>
-      <div class="contacts__map">
+      <div class="contacts__map" id="map">
         <span class="contacts__pin"></span>
       </div>
     </div>
@@ -241,8 +240,12 @@
       </div>
     </div>
   </footer>
+  <script src="//api-maps.yandex.ru/2.1/?lang=ru_RU"></script>
+  <script src="js/picturefill.min.js"></script>
+  <script src="js/svg4everybody.min.js"></script>
+  <script src="js/script.min.js"></script>
+
 </body>
-<script src="js/picturefill.min.js"></script>
-<script src="js/svg4everybody.min.js"></script>
+
 
 </html>
